# mecagent-technical-test-prahlad

./: README.md  base_model.ipynb  good_luck.ipynb  pyproject.toml
