[project]
name = "mecagent-technical-test"
version = "0.1.0"
description = "CADQuery code generation using vision-language models with PPO and feedback-based training"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cadquery>=2.5.2",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "scipy>=1.15.3",
    "trimesh>=4.6.11",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0", 
    "numpy>=1.25.0",
]
